# sixel.py

./: .gitignore  README.md  pyproject.toml
src/sixel/: __init__.py
