[tool.poetry]
name = "sixel.py"
version = "0.0.1"
description = "The modern SIXEL library for Python."
authors = ["hysrx <github@rxyth.co>"]
license = "GPL-3.0-or-later"
packages = [
    { include = 'sixel', from = 'src' }
]
readme = "README.md"
repository = "https://github.com/hysrx/sixel.py"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "==3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
